--- a/styles.css
+++ b/styles.css
@@ -117,10 +117,10 @@ p>img {
 
 
 hr {
-    height: .5px;
     width: 95%;
     background-color: var(--soft-blue);
     margin: 20px 0 10px;
+    opacity: .5;
 }
 
 .info {
